--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
         }
     </style>
 </head>
-<<<<<<< HEAD
 <body>
-=======
 <!---/ where background colors are displayed-->
-<!---/ where background colors are displayed-->
-<body bgColor=lightblue>
->>>>>>> f74e0ed46a1a653d0034d62a6cd9855dbbd391ad
+<!--<body bgColor=lightblue>-->
 <div class="wrapper">
 
 <header>
@@ -109,16 +105,12 @@
 function changecolor()
 {
     var clr = document.myform.list.value;
-<<<<<<< HEAD
 //    if (clr==="gradient") {
 //        document.
 //    } else {
-        document.style.background=clr;
- //   }
-    
-=======
-     document.bgColor=clr;
->>>>>>> f74e0ed46a1a653d0034d62a6cd9855dbbd391ad
+        document.body.style.background=clr;
+ //  
+//     document.bgColor=clr;
 }
     
 </script> 
