--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <option value = "#ffe44d"> Creative Yellow </option>
             <option value = "#ff3333"> Passion Red </option>
             <option value = "#66ff33"> Go Green </option>
-<!--            <option value = "gradient"> Ocean Blue </option>-->
+            <option value = "gradient"> Ocean Blue </option>
             
         </select>
     </form>
@@ -105,11 +105,13 @@
 function changecolor()
 {
     var clr = document.myform.list.value;
-//    if (clr==="gradient") {
-//        document.
-//    } else {
-        document.body.style.background=clr;
- //  
+    if (clr === "gradient") {
+        document.body.style.background =
+		"-webkit-linear-gradient(45deg, hsla(245, 77%, 64%, 1) 0%, hsla(245, 77%, 64%, 0) 70%), -webkit-linear-gradient(315deg, hsla(260, 43%, 62%, 1) 10%, hsla(260, 43%, 62%, 0) 80%), -webkit-linear-gradient(225deg, hsla(200, 95%, 45%, 1) 10%, hsla(200, 95%, 45%, 0) 80%), -webkit-linear-gradient(135deg, hsla(106, 92%, 52%, 1) 100%, hsla(106, 92%, 52%, 0) 70%)";
+        document.body.style.background = "linear-gradient(45deg, hsla(245, 77%, 64%, 1) 0%, hsla(245, 77%, 64%, 0) 70%), linear-gradient(135deg, hsla(260, 43%, 62%, 1) 10%, hsla(260, 43%, 62%, 0) 80%), linear-gradient(225deg, hsla(200, 95%, 45%, 1) 10%, hsla(200, 95%, 45%, 0) 80%), linear-gradient(315deg, hsla(106, 92%, 52%, 1) 100%, hsla(106, 92%, 52%, 0) 70%)";
+    } else {
+        document.body.style.background = clr;
+    }
 //     document.bgColor=clr;
 }
     
