Stylize dropdown menu for background

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         #drop_zone {
             min-height: auto;
             width: auto;
-            border: 1px solid blue;
+            border: 1px solid white;
             margin: auto;
             padding: auto;
         }
@@ -58,7 +58,7 @@
 			<div id="soundlinks"></div>
 			<hr>
             
-            <!-- Toolbasr -->
+            <!-- Toolbar -->
 			<div class="toolbar">
 				<p id="btn-save-wrapper"><a id="btn-save" href="#"><i class="glyphicon glyphicon-save"></i> Save as...</a></p>
                 <p id="document-list"></p>
@@ -130,7 +130,7 @@ function changecolor()
     } else {
         document.body.style.background = clr;
     }
-//     document.bgColor=clr;
+
 }
 </script> 
 <script type="text/javascript">
