Change appearance of drop files box

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     
     <style>
         #drop_zone {
+            background: white;
+            opacity: 0.95;
             min-height: auto;
             width: auto;
-            border: 1px solid white;
+            border: 0.5px solid white;
             margin: auto;
             padding: auto;
+            text-align: center;
         }
     </style>
 </head>
