Deleted the old noises

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 
 		<div class="fg2 sidebar">
-			<div id="soundlinks"></div>
+<!--			<div id="soundlinks"></div>-->
             
                 <div>
                 <div>
