--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Relax...</title>
+	<title>Relax....</title>
 	<meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="initial-scale = 1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
